--- a/03-week3.Rmd
+++ b/03-week3.Rmd
@@ -26,7 +26,7 @@ library(dplyr)
 You may not remember all of what you did to generate that file so let's not waste time and just cut and paste from below (but try to remember what each of the lines of code is doing and if you are not clear look at the notes from last week). Imagine you had to do all of this again by pointing and clicking in a graphical user interface rather than just sending the code to the console! As you will see time and time again, code in the end is a much more efficient way of talking to a computer.
 
 ```{r}
-crimes <- read_csv("https://raw.githubusercontent.com/eonk/cm_book/main/data/2019-06-greater-manchester-street.csv")
+crimes <- read_csv("data/2019-06-greater-manchester-street.csv")
 ```
 
 ```{r, eval=FALSE}
@@ -194,15 +194,14 @@ For each map, instead of visualising them one by one, just assign them to a new 
 So let's make *map1*. This will create a thematic map using equal intervals:
 
 ```{r}
-legend <- tm_legend(
-            position = c("right", "bottom"),
-            title.size = 0.8,
-            text.size = 0.5
-          ) # Legend to use in all maps
 
 map1 <- tm_shape(manchester_crime_lsoa) +  # Specify spatial object
-  tm_fill("count", fill.scale = tm_scale_intervals(style="equal"), fill.legend = legend) +  # Define fill variable and classification, set legend
-  tm_title("Equal")
+  tm_fill("count", # Define fill variable
+          fill.scale = tm_scale_intervals(style="equal"), # Define classification
+          fill.legend = tm_legend(title = "Equal",        # Legend title
+                                  position = c("right", "bottom"), # Legend position
+                                  text.size = 0.5, # Legend text size
+                                  title.size = 0.7))    #Legend title size
 
 ```
 
@@ -210,8 +209,12 @@ Now create *map2*, with the jenks method often preferred by geographers:
 
 ```{r}
 map2 <- tm_shape(manchester_crime_lsoa) +  # Specify spatial object
-  tm_fill("count", fill.scale = tm_scale_intervals(style="jenks"), fill.legend = legend) +  # Define fill variable and classification, set legend
-  tm_title("Jenks")
+  tm_fill("count", 
+          fill.scale = tm_scale_intervals(style="jenks"), 
+          fill.legend = tm_legend(title = "Jenks", 
+                                  position = c("right", "bottom"), 
+                                  text.size = 0.5, 
+                                  title.size = 0.7))   
 ```
 
 Now create *map3*, with the quantile method often preferred by epidemiologists:
@@ -220,8 +223,12 @@ Now create *map3*, with the quantile method often preferred by epidemiologists:
 ```{r}
 
 map3 <- tm_shape(manchester_crime_lsoa) +
-  tm_fill("count", fill.scale = tm_scale_intervals(style="quantile"), fill.legend = legend) + 
-  tm_title("Quantile")
+  tm_fill("count", 
+          fill.scale = tm_scale_intervals(style="quantile"), 
+          fill.legend = tm_legend(title = "Quantile", 
+                                  position = c("right", "bottom"),
+                                  text.size = 0.5, 
+                                  title.size = 0.7)) 
 
 ```
 
@@ -231,8 +238,13 @@ And finally make *map4*, standard deviation map, which maps the values of our va
 
 ```{r}
 map4 <- tm_shape(manchester_crime_lsoa) +
-  tm_fill("count", fill.scale = tm_scale_intervals(style="sd"), fill.legend = legend) + 
-  tm_title("Standard Deviation")
+  tm_fill("count", 
+          fill.scale = tm_scale_intervals(style="sd"), 
+          fill.legend = tm_legend(title = "Standard \nDeviation", 
+                                  position = c("right", "bottom"),
+                                  text.size = 0.5, 
+                                  title.size = 0.7)) 
+
 ```
 
 Notice that we are not plotting the maps, we are storing them into R objects (map1 to map4). This way they are saved, and you can call them later, which is what we need in order to plot them together using the `tmap_arrange()` function. 
@@ -256,7 +268,7 @@ Taken from the help file we can find more information about these, for example t
 
 ## Using graduated symbols
 
-Some of the literature on thematic cartography highlights how counts, like the ones above, are best represented using graduated symbols rather than choropleth maps (using colour, as we did above). So let's try to go for a more appropriate representation. In `tmap` you can use tm_symbols for this. We will use `tm_borders` to provide some context.
+Some of the literature on thematic cartography highlights how counts, like the ones above, are best represented using graduated symbols rather than choropleth maps (using colour, as we did above). So let's try to go for a more appropriate representation. In `tmap` you can use tm_symbols for this. We will also use `tm_borders` to provide some context.
 
 ```{r, message=FALSE}
 tm_shape(manchester_crime_lsoa) + 
@@ -288,63 +300,66 @@ In specific to crime mapping, there is an ongoing issue of the *denominators dil
 
 Last week you learned how to obtain crime data from the police UK website and you also developed the skills to obtain shapefiles with the boundaries for the UK census geographies. Specifically you learnt how to obtain LSOAs boundaries. Then we taught you how to join these data tables using `dplyr`. If you open your *manchester_lsoa* object you will see that at the moment you only have one field in this dataframe providing you with statistical information. However, there is a great deal of additional information that you could add to these data frame. Given that you are using census geographies you could add to it all kind of socio demographic variables available from the census. 
 
-You may want to read [this brief tutorial](http://infuse.ukdataservice.ac.uk/help/tutorial.html) to get a sense for how to obtain the data.We are going to get some data for Manchester city LSOAs. Let me warn you though, the census data portal is one of the closest things to hell you are going to come across on the internet. Using it will be a good reminder of why point and click interfaces can suck the life out of you.  
+The UK census data is available through a number of portals. One of them is the [nomis data portal](https://www.nomisweb.co.uk/sources/census_2021). This portal allows you to download census data for different geographies and different variables.
 
-From the main Infuse portal select the 2011 census data then when queried pick selection by geography:
+You may want to read [this brief tutorial](https://ukdataservice.ac.uk/app/uploads/areaprofilesaccessingdata2023-02-28.pdf) to get a sense for how to obtain the data. We are going to get some data for Manchester city LSOAs. 
 
-![](img/infuse1.png)
+Specifically we want to find workday population () and residential population () to be able to use the two different denominators to make comparisons. Do note that the Census data are from 2021, at a time when COVID-19 related restrictions were in place, so the workday population figures may not be representative of a typical year. The next census is not until 2031, but the ONS do publish updated population estimates over time so you may want to explore those for more up to date figures. However, for the purposes of this course, we will be working with the census data. 
 
-Expand the local authorities and select Manchester. Expand Manchester and select LSOAs:
+So we want to go to the [nomis data portal](https://www.nomisweb.co.uk/sources/census_2021) and select the 2021 census data. Specifically we want residential and workday populations. To download these you have to select two different boxes. First, scroll down to the *Workday Population* box and click on that. 
 
-![](img/infuse2.png)
+![](img/nomis1.png)
 
-At the bottom of the page click in *Add* and then where it says *Next*. Now big tip. Do not press back in your browser. If you need to navigate back once you get to that point use the *previous* button at the bottom of the screen. You will regret it if you don't do this. 
+This should take you to the site [https://www.nomisweb.co.uk/sources/census_2021_wd](https://www.nomisweb.co.uk/sources/census_2021_wd) where you can download workday population data. We want the first one in the list, which is *WD001 - Workday Population by population density*. Click on that and unzip the resulting file. This will open up a list of files where the name contains the unit of analysis at which the data are aggregated. As we are working with LSOAs we want the file 'WD001_lsoa.csv'. Move that file to save it into your data subfolder in your project directory. 
 
-Now you will need to practice navigating the Infuse system to generate a data table that has a number of relevant fields we are going to use today and at a later point this semester. I want you to create a file with information about: the resident population, the workday population, and the number of deprivation households. This will involve some trial and error but you should end up with a selection like the one below:
+Next go back to the main page and choose the 'Bulk Data Downloads' box. 
 
-![](img/infuseselection.png)
+![](img/nomis2.png)
 
-Once you have those fields click next to get the data and download the file. Unzip them and see you have your .csv file. Save this into your data subfolder in your project directory. Use `read_csv()` function from the `readr` package to import this data.
+This will take you to [https://www.nomisweb.co.uk/sources/census_2021_bulk](https://www.nomisweb.co.uk/sources/census_2021_bulk) where you can download the first file there 'TS001: Number of usual residents in households and communal establishments':
 
-```{r, message=FALSE, warnings=FALSE, echo=FALSE}
-census_lsoa_m <- read_csv("data/census_data_eon_version.csv")
+![](img/nomis3.png)
+
+Use `read_csv()` function from the `readr` package to import this data.
+
+
+```{r importcensus}
+
+census_respop <- read_csv("data/census2021-ts001-lsoa.csv") %>% clean_names()
+census_workdaypop <- read_csv("data/WD001_lsoa.csv") %>% clean_names()
+
 ```
 
-Notice that even all the variables that begin with "f" are numbers they have been read into R as characters. This is to do with the fact the first two lines do not represent cases and do have characters. R is coercing everything into character vectors. Let's clean this a bit.
-
-First we will get rid of some of the first rows which are blank. Depending on how you have downloaded the data, the number of blank rows you have may vary - just use the `head()` function to look at the first rows of your data. Our data has two blank rows, so we will use the `slice()` function from `dplyr` to remove the first two rows. We can use slice to select cases based on row number. We don't need the first two rows so we can select rows 3 to 284.
+We can join these together to create a single data frame with the two population measures we want. We can use again the `left_join()` function from the `dplyr` package to do this.
 
 ```{r}
-census_lsoa_m <- slice(census_lsoa_m, 3:284)
+
+census_lsoa_m <- left_join(census_respop %>% select(geography, geography_code, residence_type_total_measures_value), 
+                           census_workdaypop %>% select(lower_layer_super_output_areas_code,
+                                                        lower_layer_super_output_areas_label, 
+                                                        population_density), 
+                           by = c("geography_code" = "lower_layer_super_output_areas_code", 
+                                  "geography" = "lower_layer_super_output_areas_label")) %>%
+  rename(respop = residence_type_total_measures_value,
+         wkdpop = population_density)
+
 ```
 
-There are also fields that we don't need. We only need the variables beginning with F for those have the information about population and deprivation, and the *GEO_CODE* tag which will allow us to link this table to the *manchester_lsoa* file.
+Now that we have the file ready we can link it to our *manchester_lsoa* file using code we learned last week. We use again the `left_join()` function to add to the *manchester_lsoa* dataframe the variables that are present in the *census_lsoa_m*. The first argument in the function is the name of the dataframe to which we want to add fields, the second argument the name of the dataframe from which those fields come, and then you need to specify using "by" the name of the variables on each of these two dataframes that have the id variable that will allow us to ensure that we are linking the information across the same observations.
 
 ```{r}
-census_lsoa_m <- select(census_lsoa_m, GEO_CODE, F996:F323339)
+manchester_crime_lsoa <- left_join(manchester_crime_lsoa, census_lsoa_m, by = c("lsoa21cd"="geography_code"))
 ```
 
-We also want to convert the character variables into numeric ones, whilst preserving the *id* as a character variable. For this we will use the `lapply` function. This is a convenient function that will administer a function to the elements we pass as an argument. In this case we are asking to apply the `as.numeric()` function to the columns 2 to 9 of the *census_lsoa_m* data frame. This is turning into numeric all those character columns.
+And there you go... Now you have a datafile with quite a few pieces of additional information about LSOAs in Manchester. You might want to save this file at this point. 
 
-```{r}
-census_lsoa_m[2:9] <- lapply(census_lsoa_m[2:9], as.numeric)
+```{r, eval=FALSE}
+write.csv(census_lsoa_m, file = "data/manchester_census_lsoa.csv", row.names = FALSE)
+
 ```
 
-The only problem we have now is that the variable names are not very informative. If you look at the metadata file that came along you can see that there is a key there to understand what these variables mean. We could use that information to create more meaningful names for the variables we have. We will use the `rename()` function from the `dplyr` package to do the renaming:
 
-```{r}
-census_lsoa_m <- rename(census_lsoa_m, tothouse = F996, notdepr = F997, depriv1 = F998,
-                        depriv2 = F999, depriv3 = F1000, depriv4 = F1001, respop = F2384,
-                        wkdpop = F323339)
-```
-
-The rename function takes as the first argument the name of the dataframe. Then for each variable you want to change you write down the new name followed by the old name. Now that we have the file ready we can link it to our *manchester_lsoa* file using code we learned last week. We use again the `left_join()` function to add to the *manchester_lsoa* dataframe the variables that are present in the *census_lsoa_m*. The first argument in the function is the name of the dataframe to which we want to add fields, the second argument the name of the dataframe from which those fields come, and then you need to specify using "by" the name of the variables on each of these two dataframes that have the id variable that will allow us to ensure that we are linking the information across the same observations.
-
-```{r}
-manchester_crime_lsoa <- left_join(manchester_crime_lsoa, census_lsoa_m, by = c("code"="GEO_CODE"))
-```
-
-And there you go... Now you have a datafile with quite a few pieces of additional information about LSOAs in Manchester. The next step is to use this information.
+The next step is to use this information.
 
 #### Activity 4: Computing crime rates
 
@@ -355,7 +370,10 @@ But first we need to create new variables. For this we can use the `mutate()` fu
 First we want to create a rate using the usual residents, since crime rates are often expressed by 100,000 inhabitants we will multiply the division of the number of crimes by the number of usual residents by 100,000. We will then create another variable, *crimr2*, using the workday population as the denominator. We will store this new variables in our existing *manchester_lsoa* dataset. You can see that below then I specify the name of a new variable *crimr1* and then I tell the function I want that variable to equal (for each case) the division of the values in the variable *count* (number of crimes) by the variable *respop* (number of people residing in the area) and then we multiply the result of this division by 100,000 to obtain a rate expressed in those terms. Then we do likewise for the alternative measure of crime.
 
 ```{r}
-manchester_crime_lsoa <- mutate(manchester_crime_lsoa, crimr1 = (count/respop)*100000, crimr2 = (count/wkdpop)*100000)
+manchester_crime_lsoa <- manchester_crime_lsoa %>% 
+  mutate(crimr1 = (count/respop)*100000, 
+         crimr2 = (count/wkdpop)*100000)
+
 ```
 
 And now we have two new variables, one for crime rate with residential population as a denominator, and another with workplace population as a denominator. 
@@ -369,8 +387,9 @@ Let's first map crime count, next to residential population, and then the crime 
 Let's also use a different palette for each map, that is a different fill colour. To change the colours for the fill of the polygons you can use the palette argument within the `tm_fill()` function. You can explore different palettes running the following code:
 
 ```{r, eval = FALSE}
-tmaptools::palette_explorer()
+cols4all::c4a_gui()
 ```
+**Note you have to have the shiny package installed for this to work**
 
 Pick the ones you like, and use them. Here I will use Blues, Greens and Reds
 
@@ -423,10 +442,6 @@ tmap_arrange(crime_count_map, res_pop_map, crime_rate_map)
 
 What do you think about these three maps? How do you think this might be different if we were to look at workday population instead of residential population as a denominator? Discuss in your groups. 
 
-<!-- ### Homework 2  -->
-
-<!-- *Reproduce the map below, you will need to include the code you used as part of your homework submission. Discuss the results. What are the most notable differences? Which denominator do you think is more appropriate (you will need to think about this quite carefully). Are you comparing like with like? Why? Why not? Could you make these comparisons more equivalent if you think you are not comparing like with like?*  -->
-
 Once you have completed this activity, let's explore your map with the crime rate using the usual residents as the denominator using the interactive way. Assuming you want to display 'crime_rate_map' we just created, you could use the following code.
 
 ```{r, eval = FALSE, warning = FALSE, echo = TRUE}
@@ -444,150 +459,3 @@ In the first lecture we spoke a bit about Open Street Map, but if you're interes
 
 This week we learned some basic principles of thematic maps. We learned how to make them using the tmap package, we learned about the importance of classification schemes, and how each one may produce a different looking map, which may tell a different story. We learned how to access population data from the UK census, and how we can use that to calculate crime rates instead of crime counts. Taking this forward, make sure to think critically about the decisions that go into producing your thematic maps
 
-
-<!-- ### Homework 3 -->
-
-<!-- *What areas of the city seem to have the largest concentration of crime? Why? Does deprivation help you to understand the patterns? What's going on in the LSOA farthest to the South? Why does it look like a crime hotspot in this map and not in the one using the workday population?* -->
-
-<!-- ## More on small multiples and point pattern maps -->
-
-<!-- Last week we showed you how to visualise points using data from the Police UK website. One issue with such point maps is that it is impossible to tell how many points are in  -->
-
-
-<!-- One of the problems with that map was that you had so many levels within that variable that it was very difficult to tell what was what. Even some of the colors in different categories were not that different from each other. That's a typical situation where faceting or using small multiples would have been a better solution. -->
-
-<!-- What we are going to do require our data to be stored as a spatial object -as it is the case with `tmap`. So first we need to turn our data into a spatial object. For this we will use the `st_as_sf()` function. The `st_as_sf` will return a `sf` object using the geographical coordinates we specify, below you can see we also specify the coordinate system we are using. Since we didn't modify the `tmap_mode` from our last call we would still be running on the view rather than the plot format. We can go back to the plot format with a new `tmap_mode` call. -->
-
-<!-- ```{r} -->
-
-
-<!-- crime_sf <- st_as_sf(x = crimes,  -->
-<!--                         coords = c("Longitude", "Latitude"), -->
-<!--                         crs = "+proj=longlat +datum=WGS84") -->
-<!-- #For a simple map with all the points -->
-<!-- tmap_mode("plot") -->
-<!-- tm_shape(crime_sf) +  -->
-<!--   tm_dots()  -->
-<!-- ``` -->
-
-<!-- Here we are getting all the data points in the "crime_sf" object, which includes the whole of Greater Manchester. Also, since there are so many crimes, dots, it is hard to see patterns. We can add some transparency with the alpha argument as part of the `tm_dots` call. -->
-
-<!-- ```{r} -->
-<!-- tm_shape(crime_sf) +  -->
-<!--   tm_dots(alpha=0.1)  -->
-<!-- ``` -->
-
-<!-- Straight away you can start seeing some patterns, like the concentration of crimes in the town centres of all the different local authorities that conform Greater Manchester. This would be easier for you to see, if you are not familiar with the geography of Greater Manchester, if you place a basemap as a layer. -->
-
-<!-- You can also use basemaps when working on the plot mode of `tmap`. We could for example use OpenStreet maps. We use the read_osm function from `tmaptools` package to do that, by passing *crime_sf* as an argument we will be bounding the scope of the basemap to the area covered by our point pattern of crimes. We will also need to load the OpenStreetMap package for this to work.  -->
-
-<!-- Remember that the first time you use a package you always have to install it, using the `install.packages()` function! -->
-
-<!-- Now load the OpenStreetMap library into your working environment with the `library()` function:  -->
-
-<!-- ```{r, eval=FALSE} -->
-
-<!-- library(OpenStreetMap) -->
-
-<!-- ``` -->
-
-<!-- **Mac Users's Note**: *So if you're on a Mac, it's possible that at this point (or when trying to install the package) you've experienced an error. It might look something like this:*  -->
-
-<!-- `Error: package or namespace load failed for ‘OpenStreetMap’: -->
-<!--  .onLoad failed in loadNamespace() for 'rJava', details: -->
-<!--   call: dyn.load(file, DLLpath = DLLpath, ...) -->
-<!--   error: unable to load shared object '/Library/Frameworks/R.framework/Versions/3.4/Resources/library/rJava/libs/rJava.so': -->
-<!--   dlopen(/Library/Frameworks/R.framework/Versions/3.4/Resources/library/rJava/libs/rJava.so, 6): Library not loaded: @rpath/libjvm.dylib -->
-<!--   Referenced from: /Library/Frameworks/R.framework/Versions/3.4/Resources/library/rJava/libs/rJava.so -->
-<!--   Reason: image not found` -->
-
-<!-- *This is because of some drama between the rJava and your Mac OS's dealing with Java. Do not despair though, the solution is simple. Open up your `Terminal` app. This is your command line for Mac. You might have used before for other things, or you might not. If you don't know what I'm on about with `Terminal` have a look at this [helpful tutorial](https://www.macworld.co.uk/feature/mac-software/how-use-terminal-on-mac-3608274/).* -->
-
-
-<!-- *Now, once you have Terminal open, all you have to do is copy and paste the code below, and press Enter to run it:* -->
-
-
-<!-- `sudo ln -f -s $(/usr/libexec/java_home)/jre/lib/server/libjvm.dylib /usr/local/lib` -->
-
-
-<!-- *After you press Enter, Terminal will ask you for your password. This is the password to your laptop. Type in your password, and hit enter again. Once that's all done, you can go back to R, and you will have to load a package called `rJava()`. Like so:*  -->
-
-
-<!-- ```{r} -->
-<!-- library(rJava) -->
-<!-- ``` -->
-
-<!-- *Now you can again try loading the OpenStreetMap package.*  -->
-
-<!-- ```{r} -->
-
-<!-- library(OpenStreetMap) -->
-
-<!-- ``` -->
-
-
-<!-- *Hopefully should all work smoothly now!* -->
-
-<!-- **Back to everybody here!** -->
-
-<!-- You will also need another package called `tmaptools`. This gets installed when you installed tmap, but you still have to load it up.  -->
-
-<!-- ```{r} -->
-<!-- library(tmaptools) -->
-
-<!-- ``` -->
-
-<!-- We will then add the basemap layer using the `qtm()` function that is a function provided by tmap for quick plotting. -->
-
-<!-- First, create an object, let's call it `gm_osm`, by reading Open Street Map (OSM) data with the `read_osm()` function. This function reads and returns OSM tiles are read and returns as a spatial raster, or queries vectorized OSM data and returns as spatial polygons, lines, and/or points.    -->
-
-<!-- ```{r} -->
-
-<!-- gm_osm <- read_osm(crime_sf) -->
-<!-- ``` -->
-
-<!-- It might take a while to get this data, as it is quite a large set of data, being extracted from the open street map database. Just think how long it took all the volunteers to map these areas. Compared to that, the little waiting time to get this onto your computer for your map should be nothing! -->
-
-<!-- Now you can use the `qtm()` function to draw a quick thematic map. Any ideas as to why it's called qtm yet? Let's try again. You can draw a **Q**uick **T**hematic **M**ap.  -->
-
-<!-- Again we use the `tm_shape()` and `tm_dots()` functions to specify the presentation of the map, with `tm_shape()` specifying the shape object (in this case crime_sf), and `tm_dots()` to draw symbols, including specifying the color, size, and shape of the symbols. In this case we adjust the transparency with the `alpha` parameter.  -->
-
-<!-- ```{r} -->
-
-<!-- qtm(gm_osm) +  -->
-<!--   tm_shape(crime_sf) +  -->
-<!--   tm_dots(alpha=0.1)  -->
-<!-- ``` -->
-
-<!-- Let's zoom in into Manchester city, for which we can use our manchester_lsoa map. -->
-
-<!-- ```{r} -->
-<!-- mc_osm <- read_osm(manchester_lsoa, type = "stamen-toner") -->
-
-<!-- qtm(mc_osm) +  -->
-<!--   tm_shape(crime_sf) +  -->
-<!--   tm_dots(alpha=0.1)  -->
-<!-- ``` -->
-
-<!-- We can use the `bb()` function from `tmaptols` to create a bounding box around the University of Manchester, the width and height parameters I am using determine the degree of zoom in (I got these experimenting with different ones until I got the right zooming around the University location). Once you have this bounding box you can pass it as an argument to the `read_osm()` function that will look for the basemap around that location.  -->
-
-<!-- ```{r} -->
-<!-- #Create the bounding box -->
-<!-- UoM_bb <- bb("University of Manchester", width=.03, height=.02) -->
-<!-- #Read the basemap from using the stamen toner background -->
-<!-- UoM_osm <- read_osm(UoM_bb, type = "stamen-toner") -->
-<!-- #Plot the basemap -->
-<!-- qtm(UoM_osm) -->
-<!-- ``` -->
-
-<!-- Now that we have our basemap we can run our small multiples. Because we have a variable that determines the types we can use a different way to `tmap_arrange()` explained above, we can essentially ask `tmap` to create a map for each of the levels in our organising variable (in this case Crime.type). So instead of `tmap_arrange()` that requires the creation of each map, when each map simply represents different levels of an organising variable we can simplify the syntax using `tm_facets()` and within this function we specify as the first argument the name of the variable that has the different categories we want to map out. The second argument you see below `free.coords` set to FALSE simply ensures that the map gets bounded to the basemap, if you want to see what happens if you change it, just set it to TRUE instead. -->
-
-<!-- ```{r} -->
-<!-- qtm(UoM_osm) +  -->
-<!--   tm_shape(crime_sf) +  -->
-<!--   tm_dots(size=0.5, col = "Crime.type") +  -->
-<!--   tm_facets("Crime.type", free.coords=FALSE) + -->
-<!--   tm_layout(legend.show=FALSE) -->
-<!-- ``` -->
-
-<!-- We could do some further tweaking around for ensuring things look a bit neater. But we have covered a lot of ground today, and you should all give yourself a congratulatory "well done". -->
